--- a/views/partials/userFooter.ejs
+++ b/views/partials/userFooter.ejs
@@ -7,7 +7,7 @@
             <div class="col flex-horizontal-center">
               <img
                 class="icon-email"
-                src="/assets/imgs/theme/icons/icon-email.svg"
+                src="/assets/imgs/theme/logo.png"
                 alt=""
               />
               <h4 class="font-size-20 mb-0 ml-3">Sign up to Newsletter</h4>
@@ -44,7 +44,7 @@
           <div class="widget-about font-md mb-md-5 mb-lg-0">
             <div class="logo logo-width-1 wow fadeIn animated">
               <a href="#"
-              ><img style="padding-top: 1cm;" src="/assets/imgs/theme/timex.png" alt="logo"
+              ><img style="padding-top: 1cm;" src="/assets/imgs/theme/logo.png" alt="logo"
             /></a>
             </div>
             <h5 class="mt-20 mb-10 fw-600 text-grey-4 wow fadeIn animated">
@@ -54,7 +54,7 @@
               <strong>Address: </strong>MG Road, Street 32, Mumbai
             </p>
             <p class="wow fadeIn animated">
-              <strong>Phone: </strong>+01 2222 365 /(+91) 01 2345 6789
+              <strong>Phone: </strong>(+91) 85 9019 6310
             </p>
             <p class="wow fadeIn animated">
               <strong>Hours: </strong>10:00 - 18:00, Mon - Sat
