--- a/views/partials/userHeader.ejs
+++ b/views/partials/userHeader.ejs
@@ -7,11 +7,11 @@
               <ul>
                 <li>
                   <i class="fi-rs-smartphone"></i>
-                  <a href="#">(+01) - 2345 - 6789</a>
+                  <a href="/">(+91) 85 9019 6310</a>
                 </li>
                 <li>
                   <i class="fi-rs-marker"></i
-                  ><a href="page-contact.html">Our location</a>
+                  ><a href="/">Our location</a>
                 </li>
               </ul>
             </div>
