--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -34,11 +34,11 @@
                               <tr>
                                   <td class="image product-thumbnail"><img src="/uploads/products/<%=product.proDetails[0].Image[0]%>" alt="#"></td>
                                   <td class="product-des product-name">
-                                      <h5 class="product-name"><a href="#"><%=product.proDetails[0].Productname%></a></h5>
+                                      <h5 class="product-name"><a><%=product.proDetails[0].Productname%></a></h5>
                                       <p class="font-xs"><%=product.proDetails[0].ProductDescription%>
                                       </p>
                                   </td>
-                                  <td class="price" data-title="Price"><span><%=product.proDetails[0].Price%></span></td>
+                                  <td class="price" data-title="Price">₹<span><%=product.proDetails[0].Price%></span></td>
                                   <td class="text-center" data-title="Stock">
                                       <div class="detail-qty border radius  m-auto">
                                       
@@ -56,7 +56,7 @@
                                   </td>
                                   
                                   <td class="text-right" data-title="Cart">
-                                    <span>₹ <span id="<%= product.proDetails[0]._id%>-subtotal">
+                                    <span>₹<span id="<%= product.proDetails[0]._id%>-subtotal">
                                       <%=product.subtotal%></span></span>
                                   </td>
                                   
@@ -83,7 +83,7 @@
 
                               
                           <% }) %>
-                          <hr>  
+                           
                          
                           
                           </tbody>
@@ -198,7 +198,7 @@ function cartQuantity(cartId, prodId, Price, count) {
     }, 
     success: (response) => {
       
-
+    
       document.getElementById('grandtotal').innerHTML=response.grandTotal
 
       
