--- a/views/user/userhome.ejs
+++ b/views/user/userhome.ejs
@@ -442,7 +442,7 @@
                                 <h2 class="animated fw-900">Supper value deals</h2>
                                 <h1 class="animated fw-900 text-brand">On all products</h1>
                                 <p class="animated">Save more with coupons & up to 70% off</p>
-                                <a class="animated btn btn-brush btn-brush-3" href="shop-product-right.html"> Shop Now </a>
+                                <a class="animated btn btn-brush btn-brush-3" href="/shop"> Shop Now </a>
                             </div>
                         </div>
                         <div class="col-lg-7 col-md-6">
@@ -462,7 +462,7 @@
                                 <h2 class="animated fw-900">Fashion Trending</h2>
                                 <h1 class="animated fw-900 text-7">Great Collection</h1>
                                 <p class="animated">Save more with coupons & up to 20% off</p>
-                                <a class="animated btn btn-brush btn-brush-2" href="shop-product-right.html"> Discover Now </a>
+                                <a class="animated btn btn-brush btn-brush-2" href="/shop"> Shop Now </a>
                             </div>
                         </div>
                         <div class="col-lg-7 col-md-6">
@@ -482,7 +482,7 @@
                                 <h2 class="animated fw-900">Big Deals From</h2>
                                 <h1 class="animated fw-900 text-8">Manufacturer</h1>
                                 <p class="animated">Clothing, Shoes, Bags, Wallets...</p>
-                                <a class="animated btn btn-brush btn-brush-1" href="shop-product-right.html"> Shop Now </a>
+                                <a class="animated btn btn-brush btn-brush-1" href="/shop"> Shop Now </a>
                             </div>
                         </div>
                         <div class="col-lg-7 col-md-6">
