--- a/views/user/view-wishlist.ejs
+++ b/views/user/view-wishlist.ejs
@@ -45,7 +45,7 @@
                       </h5>
                     </td>
                     <td class="price" data-title="Price">
-                      <span> <%=wishlistItems.Price%> </span>
+                      ₹<span> <%=wishlistItems.Price%> </span>
                     </td>
                     <td class="text-right" data-title="Cart">
                       <button
